# Connectors

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  COMPETITOR_COMPARISON.md  DEEP_CODE_REVIEW_REPORT.md  DEPLOYMENT_ARCHITECTURE.md  DOCKER_QUICK_REFERENCE.md  EXECUTIVE_SUMMARY.md  FILES_CREATED.md  FINAL_PLAN.md  INTEGRATION_SOURCES.md  MCP_GATEWAY_COMPARISON.md  README.md  README.old.md  README_DEVOPS.md  docker-compose.override.yml  docker-compose.yml
.claude-flow/metrics/: performance.json  task-metrics.json
.claude/docs/: CODE_REVIEW_INDEX.md  README.md  (+24 more)
.hive-mind/: config.json
docs/: API_TENANT_OAUTH.md  CODE_CLEANUP_DEPRECATIONS.md  CODE_REVIEW_GITHUB_UNIFIED.md  DEPLOYMENT_RUNBOOK.md  DEVOPS_DEPLOYMENT_COMPLETE.md  DOCKER_DEPLOYMENT_SUMMARY.md  GATEWAY_SETUP_SUMMARY.md  GOOGLE_WORKSPACE_OAUTH_STATUS.md  IMPLEMENTATION_ROADMAP.md  INTEGRATING_EXISTING_MCP_SERVERS.md  LIMITATIONS.md  LISTING_AND_CALLING_MCP_SERVERS.md  MCP_ORCHESTRATION_GUIDE.md  MIGRATION_SINGLE_TO_MULTI_TENANT.md  MULTI_TENANT_IMPLEMENTATION_SUMMARY.md  MULTI_TENANT_OAUTH_ARCHITECTURE.md  MULTI_TENANT_OAUTH_README.md  MULTI_TENANT_OAUTH_SUMMARY.md  MULTI_TENANT_OAUTH_TYPES.ts  MULTI_TENANT_SETUP.md  NOTION_INTEGRATION_VALIDATION.md  OAUTH_IMPLEMENTATION_SUMMARY.md  OAUTH_REFACTORING_PLAN.md  PR_SUMMARY_NOTION_INTEGRATION.md  README.md  SECURITY-SETUP.md  SEMANTIC_ROUTING_SUMMARY.md  SERVICE_STATUS_REPORT.md  USING_CONNECTORS_PLATFORM.md  code-review-phase1-fixes.md  docker-setup.md  embedding-generation-report.md  google-workspace-folder-structure.md  graphrag-summary.md  index.md  notion-integration-summary.md  oauth-file-structure.txt  oauth-implementation-guide.md  oauth-quick-start.md
examples/: list-mcp-servers.py  oauth-usage-example.ts  python-client.py
gateway/: .dockerignore  .env.example  .eslintrc.js  .eslintrc.json  .gitignore  Dockerfile  Makefile  QUICKSTART-EMBEDDINGS.md  QUICKSTART.md  README.md  docker-compose.yml  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
generator/: README.md  pyproject.toml  test_spec.json
generator/.claude-flow/metrics/: performance.json  task-metrics.json
generator/generator/: __init__.py  cli.py  config.py  openapi_generator.py  utils.py  validators.py
generator/generator/templates/: mcp_server_template.ts.j2  test_template.ts.j2
generator/test_output/test-api/: package.json
generator/test_output/test-api/src/: index.ts
generator/test_output/test-api/tests/: integration.test.ts
memory/: claude-flow@alpha-data.json
monitoring/: prometheus.yml
python-sdk/: .coverage  FEATURE_PARITY.md  MANIFEST.in  README.md  pyproject.toml  setup.py
python-sdk/.github/workflows/: publish.yml  test.yml
python-sdk/connectors/: __init__.py  client.py  errors.py  http_client.py  mcp.py  tools.py  types.py  validators.py
python-sdk/examples/: basic_usage.py  mcp_deployment.py  tool_selection.py
python-sdk/tests/: __init__.py  test_client.py  test_http_client.py  test_mcp.py  test_tools.py
scripts/: README.md  health-check.sh  init-all-services.sh  init-neo4j.sh  logs.sh  reset-dev.sh  start-dev.sh  stop-dev.sh  test-connectivity.sh  validate-notion-integration.sh  verify-docker-environment.sh
vault/: config.hcl  docker-compose.vault.yml
(+646 files in other folders)
